src/parser/tests/snapshots/rusty__parser__tests__type_parser_tests__subrangetype_can_be_parsed.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: x
---
Variable {
    name: "x",
    data_type: DataTypeDefinition {
        data_type: SubRangeType {
            name: None,
            referenced_type: "UINT",
            referenced_type_location: SourceLocation {
                span: Range(2:20 - 2:24),
            },
            bounds: Some(
                RangeStatement {
                    start: LiteralInteger {
                        value: 0,
                    },
                    end: LiteralInteger {
                        value: 1000,
                    },
                },
            ),
        },
    },
}
