src/parser/tests/snapshots/rusty__parser__tests__type_parser_tests__typed_enum_with_initial_values_can_be_parsed.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: "result.types[0]"

---
UserTypeDeclaration {
    data_type: EnumType {
        name: Some(
            "SampleEnum",
        ),
        numeric_type: "INT",
        elements: ExpressionList {
            expressions: [
                Assignment {
                    left: Reference {
                        name: "red",
                    },
                    right: LiteralInteger {
                        value: 1,
                    },
                },
                Assignment {
                    left: Reference {
                        name: "yellow",
                    },
                    right: LiteralInteger {
                        value: 2,
                    },
                },
                Assignment {
                    left: Reference {
                        name: "green",
                    },
                    right: LiteralInteger {
                        value: 4,
                    },
                },
            ],
        },
    },
    initializer: None,
    scope: None,
}
