src/parser/tests/snapshots/rusty__parser__tests__type_parser_tests__variable_length_array_can_be_parsed.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: x
---
Variable {
    name: "x",
    data_type: DataTypeDefinition {
        data_type: ArrayType {
            name: None,
            bounds: VlaRangeStatement,
            referenced_type: DataTypeReference {
                referenced_type: "INT",
            },
            is_variable_length: true,
        },
    },
}
