src/parser/tests/snapshots/rusty__parser__tests__type_parser_tests__wide_string_type_can_be_parsed_test.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: "result.user_types[0]"
---
UserTypeDeclaration {
    data_type: StringType {
        name: Some(
            "MyString",
        ),
        is_wide: true,
        size: Some(
            LiteralInteger {
                value: 253,
            },
        ),
    },
    initializer: None,
    scope: None,
}
